syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "BrandAndProductDatabase.Service.Protos";

// Services
service BrandService {
    rpc GetAllBrandsAsync (BrandFilterList) returns (stream BrandResponse);
    rpc GetBrandByIdAsync (BrandByIdRequest) returns (BrandResponse);
    rpc GetBrandByNameAsync (BrandByNameRequest) returns (BrandResponse);
    rpc CreateBrandAsync (BrandRequest) returns (BrandResponse);
    rpc UpdateBrandAsync (BrandResponse) returns (BrandResponse);
    rpc DeleteBrandAsync (BrandByIdRequest) returns (google.protobuf.Empty);
}

// Requests
message BrandByNameRequest {
    string name = 1;
}

message BrandByIdRequest {
    int32 id = 1;
}

message BrandFilterList {
    repeated BrandFilter filters = 1;
}

message BrandFilter {
    string key = 1;
    string value = 2;
}

message BrandRequest {
    string name = 1;
    string country = 2;
    int32 environmentRating = 3;
    int32 peopleRating = 4;
    int32 animalRating = 5;
    string ratingDescription = 6;
    repeated string categories = 7;
    repeated string ranges = 8;
}

// Responses
message BrandResponse {
    int32 id = 1;
    string name = 2;
    string country = 3;
    int32 environmentRating = 4;
    int32 peopleRating = 5;
    int32 animalRating = 6;
    string ratingDescription = 7;
    repeated string categories = 8;
    repeated string ranges = 9;
}



